WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305118
[LBSE] Fix text not rendering
https://bugs.webkit.org/show_bug.cgi?id=305118
Summary
[LBSE] Fix text not rendering
Rob Buis
Reported
2026-01-08 07:32:32 PST
Fix text not rendering (including selection etc.).
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2026-01-08 07:35:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56259
Alexey Proskuryakov
Comment 2
2026-01-08 09:10:18 PST
***
Bug 305117
has been marked as a duplicate of this bug. ***
EWS
Comment 3
2026-01-08 13:59:29 PST
Committed
305312@main
(d054fa0deb01): <
https://commits.webkit.org/305312@main
> Reviewed commits have been landed. Closing PR #56259 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2026-01-08 14:00:15 PST
<
rdar://problem/167795014
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug