[LBSE] Fix text not rendering https://bugs.webkit.org/show_bug.cgi?id=305118

Reviewed by Nikolas Zimmermann.

Fix text not rendering (including selection etc.) by fixing iteration
over the text boxes.

* Source/WebCore/rendering/svg/RenderSVGText.cpp:
(WebCore::RenderSVGText::paintInlineChildren):

Canonical link: https://commits.webkit.org/305312@main